Add refactoring of attributes filtering